# -Unfinished-SharedPointers-with-QQuickItems

./: CMakeLists.txt  README.md
qml/: Main.qml
qml/modular/: ComponentLabel.qml  ComponentPhoto.qml  TemplateCreator.qml  modularQmls.qrc
src/: basetemplate.cpp  basetemplate.h  creatorbase.cpp  creatorbase.h  main.cpp  templatecontainer.cpp  templatecontainer.h
